--- a/index.html
+++ b/index.html
@@ -9,26 +9,20 @@
 <body>
 
   <h1> ¡Golpea al topo! <span class="score">0</span></h1>
-  <button onClick="startGame()">Start!</button>
+  <button class="startButton">Start!</button>
 
   <div class="game">
-    <div class="hole hole1">
-      <div class="mole"></div>
+    <div class="hole ">
     </div>
-    <div class="hole hole2">
-      <div class="mole"></div>
+    <div class="hole ">
     </div>
-    <div class="hole hole3">
-      <div class="mole"></div>
+    <div class="hole ">
     </div>
-    <div class="hole hole4">
-      <div class="mole"></div>
+    <div class="hole ">
     </div>
-    <div class="hole hole5">
-      <div class="mole"></div>
+    <div class="hole ">
     </div>
-    <div class="hole hole6">
-      <div class="mole"></div>
+    <div class="hole ">
     </div>
   </div>
 
